initial working version

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "polymer-0-8-test",
-  "version": "0.0.1",
+  "name": "polymer-arabic-game",
+  "version": "0.1",
   "authors": [
     "David Pollack <sent@da3.net>"
   ],
