--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "polymer-0-8-test",
-  "version": "0.0.1",
+  "name": "polymer-arabic-game",
+  "version": "0.1",
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^1.3.0",
