--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "webcomponents": "webcomponents/webcomponentsjs#^0.5.0",
     "layout": "Polymer/layout#0.8-preview",
     "core-ajax": "Polymer/core-ajax#0.8-preview",
+    "core-header-panel": "Polymer/core-header-panel#0.8-preview",
     "paper-ripple": "Polymer/paper-ripple#0.8-preview",
     "polymer": "Polymer/polymer#0.8-preview"
   }
