--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,9 @@
     "core-ajax": "Polymer/core-ajax#0.8-preview",
     "core-header-panel": "Polymer/core-header-panel#0.8-preview",
     "core-toolbar": "Polymer/core-toolbar#0.8-preview",
+    "core-collapse": "Polymer/core-collapse#0.8-preview",
     "paper-ripple": "Polymer/paper-ripple#0.8-preview",
-    "paper-icon-button": "Polymer/paper-icon-button#0.8-initial-port",
+    "paper-icon-button": "Polymer/paper-icon-button#0.8-preview",
     "polymer": "Polymer/polymer#0.8-preview",
     "recordrtc": "*"
   },
