--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "core-header-panel": "Polymer/core-header-panel#0.8-preview",
     "core-toolbar": "Polymer/core-toolbar#0.8-preview",
     "core-collapse": "Polymer/core-collapse#0.8-preview",
+    "core-overlay": "Polymer/core-overlay#0.8-preview-wip-layer",
     "paper-ripple": "Polymer/paper-ripple#0.8-preview",
     "paper-icon-button": "Polymer/paper-icon-button#0.8-preview",
     "polymer": "Polymer/polymer#^0.8.0-rc.2",
@@ -28,6 +29,7 @@
   },
   "resolutions": {
     "layout": "0.8-preview",
-    "polymer": "^0.8.0-rc.2"
+    "polymer": "^0.8.0-rc.2",
+    "core-meta": "0.8-preview"
   }
 }
