--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polymer-arabic-game",
-  "version": "0.1",
+  "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^1.3.0",
@@ -16,6 +16,7 @@
     "gulp-imagemin": "^1.0.0",
     "gulp-jshint": "^1.6.3",
     "gulp-load-plugins": "^0.5.3",
+    "gulp-manifest": "0.0.6",
     "gulp-minify-html": "^0.1.4",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
