--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-arabic-game",
+  "name": "this-is-not-a-vocabulary-game",
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
