--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "paper-ripple": "Polymer/paper-ripple#0.8-preview",
     "paper-icon-button": "Polymer/paper-icon-button#0.8-preview",
     "polymer": "Polymer/polymer#^0.8.0-rc.4",
-    "recordrtc": "*"
+    "recordrtc": "*",
+    "viewport-units-buggyfill": "~0.5.2"
   },
   "resolutions": {
     "layout": "0.8-preview",
