--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "core-toolbar": "Polymer/core-toolbar#0.8-preview",
     "core-collapse": "Polymer/core-collapse#0.8-preview",
     "core-overlay": "Polymer/core-overlay#0.8-preview-wip-layer",
+    "core-a11y-keys": "dhpollack/core-a11y-keys#0.8-preview",
     "paper-ripple": "Polymer/paper-ripple#0.8-preview",
     "paper-icon-button": "Polymer/paper-icon-button#0.8-preview",
     "polymer": "Polymer/polymer#^0.8.0-rc.4",
