--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "this-is-not-a-vocabulary-game",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "mousetrap": "^1.5.2"
+  },
   "devDependencies": {
     "browser-sync": "^1.3.0",
     "del": "^0.1.2",
