--- a/bower.json
+++ b/bower.json
@@ -19,12 +19,20 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.6.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#master",
     "iron-ajax": "PolymerElements/iron-ajax#master",
+    "iron-icons": "PolymerElements/iron-icons#master",
+    "iron-iconset": "PolymerElements/iron-iconset#master",
+    "iron-collapse": "PolymerElements/iron-collapse#master",
+    "iron-selector": "PolymerElements/iron-selector#master",
     "paper-header-panel": "PolymerElements/paper-header-panel#master",
     "paper-toolbar": "PolymerElements/paper-toolbar#master",
-    "iron-collapse": "PolymerElements/iron-collapse#master",
     "paper-ripple": "PolymerElements/paper-ripple#master",
-    "iron-icons": "PolymerElements/iron-icons#master",
-    "polymer": "Polymer/polymer#0.8-preview",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#master",
+    "paper-button": "PolymerElements/paper-button#master",
+    "paper-menu": "PolymerElements/paper-menu#master",
+    "paper-item": "PolymerElements/paper-item#master",
+    "polymer": "Polymer/polymer#v0.9.0-rc.1",
+    "web-component-tester": "Polymer/web-component-tester#master",
+    "test-fixture": "Polymer/test-fixture#master",
     "viewport-units-buggyfill": "~0.5.2"
   }
 }
