--- a/bower.json
+++ b/bower.json
@@ -17,26 +17,24 @@
   "dependencies": {
     "font-roboto": "Polymer/font-roboto#^0.5.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#master",
-    "iron-ajax": "PolymerElements/iron-ajax#master",
-    "iron-icons": "PolymerElements/iron-icons#master",
-    "iron-iconset": "PolymerElements/iron-iconset#master",
-    "iron-collapse": "PolymerElements/iron-collapse#master",
-    "iron-selector": "PolymerElements/iron-selector#master",
-    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#master",
-    "iron-localstorage": "PolymerElements/iron-localstorage#master",
-    "paper-header-panel": "PolymerElements/paper-header-panel#master",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#master",
-    "paper-toolbar": "PolymerElements/paper-toolbar#master",
-    "paper-ripple": "PolymerElements/paper-ripple#master",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#master",
-    "paper-button": "PolymerElements/paper-button#master",
-    "paper-menu": "PolymerElements/paper-menu#master",
-    "paper-item": "PolymerElements/paper-item#master",
-    "paper-toast": "PolymerElements/paper-toast#master",
-    "polymer": "Polymer/polymer#master",
-    "web-component-tester": "Polymer/web-component-tester#master",
-    "test-fixture": "Polymer/test-fixture#master",
-    "viewport-units-buggyfill": "~0.5.2"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.0",
+    "iron-iconset": "PolymerElements/iron-iconset#^1.0.0",
+    "iron-collapse": "PolymerElements/iron-collapse#^1.0.0",
+    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^1.0.0",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
+    "paper-ripple": "PolymerElements/paper-ripple#^1.0.0",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.0.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.0",
+    "paper-menu": "PolymerElements/paper-menu#^1.0.0",
+    "paper-item": "PolymerElements/paper-item#^1.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
+    "polymer": "Polymer/polymer#^1.0.0",
+    "viewport-units-buggyfill": "^0.5.2"
   }
 }
