--- a/package.json
+++ b/package.json
@@ -4,38 +4,41 @@
   "dependencies": {
     "mousetrap": "^1.5.2"
   },
+  "private": true,
   "devDependencies": {
-    "browser-sync": "^1.3.0",
-    "del": "^0.1.2",
+    "browser-sync": "^2.6.4",
+    "del": "^1.1.1",
+    "glob": "^5.0.6",
     "gulp": "^3.8.5",
-    "gulp-autoprefixer": "^0.0.8",
-    "gulp-cache": "^0.2.2",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-cache": "^0.2.8",
     "gulp-changed": "^1.0.0",
     "gulp-crisper": "0.0.4",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-flatten": "^0.0.2",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-flatten": "^0.0.4",
     "gulp-gh-pages": "^0.5.0",
     "gulp-if": "^1.2.1",
-    "gulp-imagemin": "^1.0.0",
+    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.6.3",
-    "gulp-load-plugins": "^0.5.3",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-manifest": "0.0.6",
-    "gulp-minify-html": "^0.1.4",
+    "gulp-minify-html": "^1.0.2",
     "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.4.0",
+    "gulp-replace": "^0.5.3",
     "gulp-shell": "^0.4.0",
     "gulp-size": "^1.0.0",
-    "gulp-uglify": "^0.3.1",
-    "gulp-useref": "^0.6.0",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5",
+    "gulp-useref": "^1.1.2",
     "gulp-vulcanize": "^6.0.0",
     "hangul-js": "^0.1.4",
-    "jshint-stylish": "^0.4.0",
-    "merge-stream": "^0.1.6",
+    "jshint-stylish": "^2.0.0",
+    "merge-stream": "^0.1.7",
     "mkpath": "^0.1.0",
     "opn": "^1.0.0",
     "psi": "^1.0.4",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^0.3.6"
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
