--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     "paper-toast": "PolymerElements/paper-toast#^1.0.0",
     "paper-tabs": "PolymerElements/paper-tabs#^1.0.0",
     "polymer": "Polymer/polymer#^1.0.0",
-    "viewport-units-buggyfill": "^0.5.2"
+    "viewport-units-buggyfill": "^0.5.2",
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.1"
   }
 }
