--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "opn": "^1.0.0",
     "psi": "^1.0.4",
     "require-dir": "^0.3.0",
+    "vulcanize": ">= 1.4.2",
     "run-sequence": "^1.0.2"
   },
   "engines": {
