--- a/bower.json
+++ b/bower.json
@@ -41,6 +41,7 @@
     "neon-animation": "PolymerElements/neon-animation#^1.0.0",
     "polymer": "Polymer/polymer#^1.0.0",
     "viewport-units-buggyfill": "^0.5.2",
-    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.1"
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.1",
+    "webrtc-adapter": "~0.1.3"
   }
 }
