--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "this-is-not-a-vocabulary-game",
+  "name": "tinavg",
   "private": true,
-  "version": "0.5.0",
+  "version": "0.2.0",
   "authors": [
     "David Pollack <sent@da3.net>"
   ],
