--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^1.0.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
+    "iron-form": "PolymerElements/iron-form#^1.0.0",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
@@ -38,11 +39,12 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.0.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.0.0",
     "paper-input": "PolymerElements/paper-input#^1.0.0",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.0",
     "neon-animation": "PolymerElements/neon-animation#^1.0.0",
     "polymer": "Polymer/polymer#^1.0.0",
     "viewport-units-buggyfill": "^0.5.2",
     "firebase-element": "GoogleWebComponents/firebase-element#~1.0.1",
     "webrtc-adapter": "~0.1.3",
-    "cookieconsent2": "~1.0.4"
+    "cookieconsent2": "~1.0.4",
   }
 }
