--- a/bower.json
+++ b/bower.json
@@ -43,8 +43,7 @@
     "neon-animation": "PolymerElements/neon-animation#^1.0.0",
     "polymer": "Polymer/polymer#^1.0.0",
     "viewport-units-buggyfill": "^0.5.2",
-    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.1",
-    "webrtc-adapter": "~0.1.3",
-    "cookieconsent2": "~1.0.4",
+    "firebase-element": "GoogleWebComponents/firebase-element#^1.0.0",
+    "cookieconsent2": "^1.0.0"
   }
 }
