--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "gulp-changed": "^1.0.0",
     "gulp-crisper": "0.0.4",
     "gulp-cssmin": "^0.1.7",
+    "gulp-filelist": "^0.2.0",
     "gulp-flatten": "^0.0.4",
     "gulp-gh-pages": "^0.5.0",
+    "gulp-google-webfonts": "0.0.6",
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.6.3",
