--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-replace": "^0.5.3",
     "gulp-shell": "^0.4.0",
     "gulp-size": "^1.0.0",
+    "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.1.2",
     "gulp-util": "^3.0.5",
