--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "gulp-gh-pages": "^0.5.0",
     "gulp-google-webfonts": "0.0.6",
     "gulp-if": "^1.2.1",
-    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.6.3",
     "gulp-jsonlint": "^1.1.0",
     "gulp-load-plugins": "^0.10.0",
@@ -43,6 +42,7 @@
     "psi": "^1.0.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
+    "surge": "^0.14.3",
     "vulcanize": ">= 1.4.2"
   },
   "engines": {
