upgraded to polymer 1.2

--- a/bower.json
+++ b/bower.json
@@ -16,33 +16,11 @@
   ],
   "dependencies": {
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^1.0.0",
-    "iron-iconset": "PolymerElements/iron-iconset#^1.0.0",
-    "iron-collapse": "PolymerElements/iron-collapse#^1.0.0",
-    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
-    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^1.0.0",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
-    "iron-form": "PolymerElements/iron-form#^1.0.0",
-    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
-    "paper-ripple": "PolymerElements/paper-ripple#^1.0.0",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.0.0",
-    "paper-button": "PolymerElements/paper-button#^1.0.0",
-    "paper-menu": "PolymerElements/paper-menu#^1.0.0",
-    "paper-item": "PolymerElements/paper-item#^1.0.0",
-    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.0.0",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.0.0",
-    "paper-input": "PolymerElements/paper-input#^1.0.0",
-    "paper-progress": "PolymerElements/paper-progress#^1.0.0",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.0.0",
-    "platinum-sw": "PolymerElements/platinum-sw#^1.0.0",
-    "neon-animation": "PolymerElements/neon-animation#^1.0.0",
-    "polymer": "Polymer/polymer#^1.0.0",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.0",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.0",
+    "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
+    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "polymer": "Polymer/polymer#^1.2.0",
     "viewport-units-buggyfill": "^0.5.0",
     "firebase-element": "GoogleWebComponents/firebase-element#^1.0.0",
     "cookieconsent2": "dhpollack/cookieconsent2#master",
